[CORE] Remove GriefPrevention and Spigot
Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>