@@ -19,8 +19,6 @@
 
 package io.github.rypofalem.armorstandeditor;
 
-import com.google.common.collect.ImmutableList;
-
 import io.github.rypofalem.armorstandeditor.api.ArmorStandRenameEvent;
 import io.github.rypofalem.armorstandeditor.api.ItemFrameGlowEvent;
 import io.github.rypofalem.armorstandeditor.menu.ASEHolder;
@@ -72,9 +70,8 @@ public class PlayerEditorManager implements Listener {
 
     // Instantiate protections used to determine whether a player may edit an armor stand or item frame
     //NOTE: GriefPreventionProtection is Depreciated as of v1.19.3-40
-    private final List<Protection> protections = ImmutableList.of(
+    private final List<Protection> protections = List.of(
         new GriefDefenderProtection(),
-        new GriefPreventionProtection(),
         new LandsProtection(),
         new PlotSquaredProtection(),
         new SkyblockProtection(),
